# SSH-Hunt

./: .env.example  .env.runner.example  .gitignore  .gitleaks.toml  AGENTS.md  ASSURANCE.md  CI_CD_HARDENING_REPORT.md  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  STORY.md  docker-compose.runner.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deep-security-sweep.yml  docker.yml  sbom.yml  security.yml
docker/runner/: Dockerfile
docs/: DEPLOYMENT.md  GAMEPLAY.md  SECURITY.md  SELF_HOSTED_RUNNER.md
docs/examples/: admin.example.yaml  config.example.yaml  hidden_ops.example.yaml
scripts/: backup.sh  cache-image.sh  dev.sh  install.sh  prepare-runner-workdirs.sh  refresh-runner-cpu-budget.sh  restore.sh  verify-self-hosted-runner-directive.sh
ssh-hunt/: Cargo.toml  deny.toml  osv-scanner.toml
ssh-hunt/.cargo/: audit.toml
ssh-hunt/crates/admin/: Cargo.toml
ssh-hunt/crates/admin/src/: main.rs
ssh-hunt/crates/protocol/: Cargo.toml
ssh-hunt/crates/protocol/src/: lib.rs
ssh-hunt/crates/scripts/: Cargo.toml
ssh-hunt/crates/scripts/src/: lib.rs
ssh-hunt/crates/shell/: Cargo.toml
ssh-hunt/crates/shell/src/: lib.rs
ssh-hunt/crates/ssh_hunt_server/: Cargo.toml
ssh-hunt/crates/ssh_hunt_server/src/: builtins.rs  config.rs  main.rs
ssh-hunt/crates/ui/: Cargo.toml
ssh-hunt/crates/ui/src/: lib.rs
ssh-hunt/crates/vfs/: Cargo.toml
ssh-hunt/crates/vfs/src/: lib.rs
ssh-hunt/crates/world/: Cargo.toml
ssh-hunt/crates/world/src/: lib.rs
ssh-hunt/migrations/: 0001_core.sql  0002_economy_social.sql  0003_world_content.sql  0004_vfs.sql
ssh-hunt/tests/: Cargo.toml
ssh-hunt/tests/src/: lib.rs
ssh-hunt/tests/tests/: regression.rs
