[workspace]
members = [
  "crates/ssh_hunt_server",
  "crates/shell",
  "crates/vfs",
  "crates/world",
  "crates/scripts",
  "crates/ui",
  "crates/admin",
  "crates/protocol",
  "tests",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "1.0.0"
authors = ["SSH-Hunt Contributors"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bytes = "1.7"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
cidr = { version = "0.3", features = ["serde"] }
ipnet = "2.11"
once_cell = "1.20"
rand = "0.9"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rhai = { version = "1.20", features = ["sync", "metadata"] }
russh = "0.57"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "migrate"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
